# pallograph

./: .gitignore  Cargo.toml  README.md  appsv1.dl  corev1.dl  dl_build.sh  metav1.dl  networkingv1.dl  pallograph.dl  selectors.dl
pallograph_ddlog/: Cargo.toml  pallograph.dot
pallograph_ddlog/src/: build.rs  lib.rs  main.rs
pallograph_ddlog/types/: Cargo.toml  pallograph.rs
pallograph_ddlog/types/appsv1/: Cargo.toml  appsv1.rs
pallograph_ddlog/types/corev1/: Cargo.toml  corev1.rs
pallograph_ddlog/types/ddlog_std/: ddlog_std.rs
pallograph_ddlog/types/metav1/: Cargo.toml  metav1.rs
pallograph_ddlog/types/networkingv1/: Cargo.toml  networkingv1.rs
pallograph_ddlog/types/selectors/: Cargo.toml  selectors.rs
src/: main.rs
