[package]
name = "pallograph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.65.0", features = ["runtime","derive","client"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }

futures = "0.3.17"
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = "0.6.8"
anyhow = "1.0.44"
env_logger = "0.9.0"
log = "0.4.11"
serde = { version = "1.0.130", features = ["derive"] }
# serde_json = "1.0.68"
# serde_yaml = "0.8.21"

# either = "1.6.1"
# schemars = "0.8.6"
# static_assertions = "1.1.0"
# tar = "0.4.37"
# tracing = "0.1.29"
# tracing-subscriber = "0.3.3"
# warp = { version = "0.3", default-features = false, features = ["tls"] }
# http = "0.2.5"
# json-patch = "0.2.6"
# tower = { version = "0.4.6", features = ["limit"] }
# tower-http = { version = "0.2.0", features = ["trace", "decompression-gzip"] }
# hyper = { version = "0.14.13", features = ["client", "http1", "stream", "tcp"] }
# thiserror = "1.0.29"
# backoff = "0.4.0"
